force-app/main/default/objects/JBCXM__PlaybookTasks__c/JBCXM__PlaybookTasks__c.object-meta.xml
<CustomObject>
    <label>Playbook Task</label>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Playbook Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>