force-app/main/default/objects/JBCXM__PlaybookTasks__c/fields/JBCXM__DeltaDays__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DeltaDays__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Delta between due date source field and due date</description>
    <label>Delta days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>