force-app/main/default/objects/JBCXM__PlaybookTasks__c/fields/JBCXM__Description__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>