force-app/main/default/objects/JBCXM__PlaybookTasks__c/fields/JBCXM__DueDateSrc__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DueDateSrc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Due date source</label>
    <referenceTo>JBCXM__GSMetaInfo__c</referenceTo>
    <relationshipLabel>Due Date Source Option</relationshipLabel>
    <relationshipName>DueDateSourceOption</relationshipName>
    <type>Lookup</type>
</CustomField>