force-app/main/default/objects/JBCXM__PlaybookTasks__c/fields/JBCXM__DynamicFields__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DynamicFields__c</fullName>
    <label>Dynamic Fields</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>