force-app/main/default/objects/JBCXM__PlaybookTasks__c/fields/JBCXM__IsDynamicOwner__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsDynamicOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has dynamic owner</label>
    <type>Checkbox</type>
</CustomField>