force-app/main/default/objects/JBCXM__PlaybookTasks__c/fields/JBCXM__Owner__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Playbook Task</relationshipLabel>
    <relationshipName>PlaybookTask</relationshipName>
    <type>Lookup</type>
</CustomField>