force-app/main/default/objects/JBCXM__PlaybookTasks__c/fields/JBCXM__PlaybookId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__PlaybookId__c</fullName>
    <label>Playbook Id</label>
    <referenceTo>JBCXM__Playbook__c</referenceTo>
    <relationshipLabel>Playbook Tasks</relationshipLabel>
    <relationshipName>PlaybookTasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>