force-app/main/default/objects/JBCXM__PlaybookTasks__c/fields/JBCXM__Priority__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Priority__c</fullName>
    <label>Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>