force-app/main/default/objects/JBCXM__PlaybookTasks__c/fields/JBCXM__Sync__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync</label>
    <type>Checkbox</type>
</CustomField>