force-app/main/default/objects/JBCXM__PlaybookTasks__c/fields/JBCXM__TaskJSON__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__TaskJSON__c</fullName>
    <label>Task JSON</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>