force-app/main/default/objects/JBCXM__PlaybookTasks__c/fields/JBCXM__Type__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Type</label>
    <referenceTo>JBCXM__GSMetaInfo__c</referenceTo>
    <relationshipLabel>Playbook Task Type</relationshipLabel>
    <relationshipName>PlaybookTaskType</relationshipName>
    <type>Lookup</type>
</CustomField>